[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/art/background images/background 7-5.png" type="Texture" id=1]
[ext_resource path="res://levels/Level02.gd" type="Script" id=2]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://words/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/collect items/collect item yellow.png" type="Texture" id=6]
[ext_resource path="res://assets/art/collect items/collect_item_aqua.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/soundtrack/soundtrack_lvl_02.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/art/decorative objects/Lvl 1 objects.png" type="Texture" id=9]
[ext_resource path="res://assets/sounds/soundtrack/soundtrack_segue.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/art/collect items/Switch button.png" type="Texture" id=11]
[ext_resource path="res://assets/art/decorative objects/Lvl 2 objects.png" type="Texture" id=12]
[ext_resource path="res://assets/art/danger/Spikes.png" type="Texture" id=15]
[ext_resource path="res://assets/art/collect items/Victory button .png" type="Texture" id=16]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 22, 361, 124, 22, 272, 159, 429, 360 )

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/Victory button .png-f8175e87fc9f114e2980a76ef3f40caa.stex"

[sub_resource type="TileSet" id=3]
2/name = "collect_item_aqua.png 2"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "collect item yellow.png 3"
3/texture = ExtResource( 6 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Switch button.png 4"
4/texture = ExtResource( 11 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( -8, -4, 144, 137 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Spikes.png 5"
5/texture = ExtResource( 15 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 37, 77, 460, 363 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 1 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Victory button .png 6"
6/texture = SubResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 35, 40, 426, 422 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Victory button .png 7"
7/texture = ExtResource( 16 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( -5, -3, 274, 267 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[sub_resource type="TileSet" id=4]
0/name = "Lvl 2 objects.png 0"
0/texture = ExtResource( 12 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 96, 608, 352 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Lvl 2 objects.png 1"
1/texture = ExtResource( 12 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 1440, 256, 192, 192 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
3/name = "Lvl 1 objects.png 3"
3/texture = ExtResource( 9 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 98, 140, 98, 133 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Lvl 2 objects.png 4"
4/texture = ExtResource( 12 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 640, 256, 480, 192 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[node name="Level02" type="Node2D"]
position = Vector2( -14.119, 577.044 )
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 715.226, -1140.71 )
motion_offset = Vector2( 0.7, 0.7 )
motion_mirroring = Vector2( 4032, 3024 )
__meta__ = {
"_edit_group_": true
}

[node name="background 1" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.878431 )
position = Vector2( -759.754, -424.198 )
texture = ExtResource( 1 )
centered = false

[node name="Tilemap_pickups" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 55, 55 )
cell_quadrant_size = 64
format = 1
tile_data = PoolIntArray( -2424548, 7, 0, -1703740, 4, 0, -1245089, 536870916, 0, -1048442, 536870916, 0, -393073, 4, 0, -327566, 4, 0 )

[node name="TileMap_lvl_2_danger" type="TileMap" parent="."]
format = 1
tile_data = PoolIntArray( -2424663, 536870912, 0, -2424658, 536870912, 0, -2424655, 536870912, 0, -1572632, 0, 0, -1507100, 0, 0, -1441576, 536870912, 0, -1113969, 0, 0, -1113965, 536870912, 0, -589657, 536870912, 0, -589656, 0, 0, -196591, 536870912, 0, -196570, 536870912, 0, -131026, 536870912, 0, -65508, 536870912, 0, -65356, 536870912, 0, -65354, 0, 0 )

[node name="TileMap_lvl_2_objects" type="TileMap" parent="."]
tile_set = SubResource( 4 )
format = 1
tile_data = PoolIntArray( -1834770, 0, 0, -1834764, 536870912, 0, -1769309, 6, 0, -1703777, 7, 0, -1638153, 1, 0, -1441606, 536870918, 0, -1376136, 2, 0, -1179563, 0, 0, -1179555, 536870912, 0, -1179547, 536870912, 0, -1179541, 0, 0, -1179537, 536870912, 0, -1179531, 0, 0, -1114025, 5, 0, -1113999, 5, 0, -982954, 1, 0, -982952, 4, 0, -982948, 1, 0, -982942, 1, 0, -982938, 4, 0, -982937, 1, 0, -982931, 1, 0, -982925, 1, 0, -982919, 1, 0, -982917, 4, 0, -982860, 536870913, 0, -851908, 0, 0, -786371, 5, 0, -720836, 1, 0, -720828, 4, 0, -720822, 1, 0, -589747, 7, 0, -458621, 3, 0, -393131, 3, 0, -327595, 3, 0, -262132, 1, 0, -262118, 1, 0, -130984, 3, 0, -130970, 3, 0, -130955, 3, 0, -65533, 1, 0, -65531, 1, 0, 131087, 7, 0 )

[node name="TileMap_lvl_2_world" type="TileMap" parent="."]
cell_size = Vector2( 55, 55 )
cell_quadrant_size = 64
format = 1
tile_data = PoolIntArray( -3210970, 4, 0, -3014362, 13, 0, -2817754, 13, 0, -2621146, 13, 0, -2490173, 536870917, 0, -2490171, 536870925, 0, -2490168, 536870925, 0, -2490165, 536870925, 0, -2490162, 536870925, 0, -2490159, 536870925, 0, -2490155, 536870916, 0, -2424538, 13, 0, -2293566, 536870925, 0, -2293548, 536870925, 0, -2227930, 13, 0, -2096958, 536870925, 0, -2096940, 536870925, 0, -2031322, 13, 0, -1900363, 536870917, 0, -1900361, 536870925, 0, -1900358, 536870925, 0, -1900355, 536870925, 0, -1900352, 536870925, 0, -1900349, 536870918, 0, -1900341, 536870925, 0, -1900332, 536870925, 0, -1900306, 4, 0, -1900304, 13, 0, -1900301, 13, 0, -1900298, 13, 0, -1900286, 13, 0, -1900283, 13, 0, -1834714, 13, 0, -1703733, 536870925, 0, -1703724, 536870925, 0, -1703699, 13, 0, -1703696, 13, 0, -1703693, 13, 0, -1703690, 13, 0, -1703678, 536870925, 0, -1703675, 536870925, 0, -1703660, 536870925, 0, -1703657, 13, 0, -1703654, 13, 0, -1703651, 13, 0, -1703648, 13, 0, -1703645, 13, 0, -1703643, 13, 0, -1638105, 7, 0, -1572689, 536870923, 0, -1507150, 536870919, 0, -1507148, 536870925, 0, -1507145, 536870925, 0, -1507142, 536870925, 0, -1507139, 536870925, 0, -1507136, 536870925, 0, -1507133, 536870925, 0, -1507130, 536870925, 0, -1507127, 536870925, 0, -1507124, 536870918, 0, -1507116, 536870925, 0, -1507113, 13, 0, -1507110, 536870925, 0, -1507107, 536870925, 0, -1507093, 536870917, 0, -1507091, 536870925, 0, -1507088, 536870925, 0, -1507085, 536870925, 0, -1507082, 536870925, 0, -1507070, 536870925, 0, -1507067, 536870925, 0, -1507064, 536870925, 0, -1507061, 536870925, 0, -1507058, 536870925, 0, -1507055, 536870925, 0, -1507052, 536870925, 0, -1507049, 13, 0, -1507046, 13, 0, -1507043, 13, 0, -1507040, 13, 0, -1507037, 13, 0, -1507034, 7, 0, -1441623, 11, 0, -1376038, 7, 0, -1310540, 536870919, 0, -1310538, 536870925, 0, -1310535, 536870925, 0, -1310532, 536870925, 0, -1310529, 536870925, 0, -1310526, 536870925, 0, -1310524, 536870918, 0, -1310508, 536870925, 0, -1310505, 13, 0, -1310486, 536870925, 0, -1310483, 536870925, 0, -1310480, 536870925, 0, -1310477, 536870925, 0, -1310474, 536870925, 0, -1310471, 536870925, 0, -1310468, 536870925, 0, -1310465, 536870925, 0, -1310462, 536870925, 0, -1310459, 536870925, 0, -1244967, 7, 0, -1113999, 536870915, 0, -1113997, 3, 0, -1113930, 536870919, 0, -1113928, 536870925, 0, -1113925, 536870925, 0, -1113922, 536870925, 0, -1113919, 536870925, 0, -1113918, 536870918, 0, -1113900, 536870925, 0, -1113896, 7, 0, -1113878, 536870925, 0, -1113875, 536870918, 0, -982942, 1, 0, -982939, 2, 0, -982930, 2, 0, -982921, 2, 0, -982912, 2, 0, -982903, 2, 0, -982894, 12, 0, -982879, 10, 0, -982873, 10, 0, -982866, 536870922, 0, -917311, 536870925, 0, -917298, 4, 0, -917297, 536870925, 0, -917294, 536870925, 0, -917291, 536870918, 0, -917270, 536870925, 0, -720740, 11, 0, -720703, 536870925, 0, -720662, 536870925, 0, -655290, 536870922, 0, -655284, 536870922, 0, -655275, 0, 0, -589712, 3, 0, -524223, 536870923, 0, -524194, 11, 0, -524095, 536870925, 0, -524054, 536870925, 0, -458601, 11, 0, -327621, 536870923, 0, -327582, 11, 0, -327487, 536870925, 0, -327484, 536870925, 0, -327481, 536870925, 0, -327446, 536870925, 0, -262001, 11, 0, -131058, 10, 0, -131045, 10, 0, -131031, 536870923, 0, -131020, 536870923, 0, -130878, 536870919, 0, -130876, 536870925, 0, -130873, 536870925, 0, -130870, 536870925, 0, -130867, 536870925, 0, -130864, 13, 0, -130863, 536870916, 0, -130854, 536870917, 0, -130852, 536870925, 0, -130849, 536870925, 0, -130846, 536870925, 0, -130843, 536870925, 0, -130840, 536870925, 0, -130837, 536870918, 0, -65434, 11, 0, -65426, 11, 0, -65418, 11, 0, -65409, 11, 0, -65400, 11, 0, 65539, 536870922, 0, 65744, 536870925, 0, 65753, 536870925, 0, 131086, 1, 0, 131089, 2, 0, 131098, 2, 0, 131107, 2, 0, 131116, 2, 0, 131125, 2, 0, 131134, 12, 0, 262352, 536870925, 0, 262355, 536870925, 0, 262358, 536870925, 0, 262361, 536870925, 0 )

[node name="Button1" parent="." instance=ExtResource( 4 )]
position = Vector2( 12850, -236.938 )
prompt_key = 1
platform_off_x = 550
platform_off_y = 800
platform_length = 850
exitarea_off_x = 30

[node name="Button2" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 18825.9, -1421.81 )
prompt_key = 2
platform_off_x = 480
platform_off_y = 1550
platform_length = 740
exitarea_off_x = 0
prompt_off_y = 0
camera_off_y = -250

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 268.023, -68.8281 )
scale = Vector2( 0.5, 0.5 )

[node name="MusicLevel" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
autoplay = true

[node name="MusicSegue" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0

[connection signal="activated" from="Button1" to="." method="_on_Buttons_activated"]
[connection signal="deactivated" from="Button1" to="." method="_on_Buttons_deactivated"]
[connection signal="activated" from="Button2" to="." method="_on_Buttons_activated"]
[connection signal="deactivated" from="Button2" to="." method="_on_Buttons_deactivated"]
